--- a/bytetrack_classroom.yaml
+++ b/bytetrack_classroom.yaml
@@ -1,6 +1,14 @@
 tracker_type: bytetrack
+
 track_high_thresh: 0.6
 track_low_thresh: 0.1
 new_track_thresh: 0.5
 match_thresh: 0.7
 track_buffer: 60
+
+gmc_method: sparseOptFlow
+proximity_thresh: 0.5
+appearance_thresh: 0.25
+with_reid: False
+
+fuse_score: True
